--- a/competences.html
+++ b/competences.html
@@ -159,8 +159,21 @@
         </div>
     
         <footer>
-            <h2>2024 Hodjiadoum porfolio</h2>
-            <p>Interdiction à la republication ou copie. Tous les droits sont réservés.</p>
+          <h2>@ 2024 Hodjiadoum porfolio. All rights reserved.</h2>
+          <div class="icons flex aic jcc gap-20">
+            <div class="icon">
+              <i class="bi bi-facebook"></i>
+            </div>
+            <div class="icon">
+              <i class="bi bi-instagram"></i>
+            </div>
+            <div class="icon">
+              <i class="bi bi-linkedin"></i>
+            </div>
+            <div class="icon">
+              <i class="bi bi-twitter"></i>
+            </div>
+          </div>
         </footer>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     
